--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,10 +1,18 @@
-.header_container {
+.header_container,
+.header_container_fixed {
   width: 100%;
   margin: 0;
   border-bottom: #e6e6e6 1px solid;
-  position: relative;
   background-color: #fff;
   z-index: 10;
+}
+
+.header_container {
+  position: relative;
+}
+
+.header_container_fixed {
+  position: fixed;
 }
 
 .header {
@@ -168,7 +176,7 @@
   top: 0;
   opacity: 0;
   transition: all 0.3s;
-  padding: 111px 0 0 0;
+  padding: 70px 0 0 0;
   pointer-events: none;
 }
 
@@ -180,6 +188,6 @@
   top: 0;
   position: fixed;
   opacity: 1;
-  padding: 111px 0 0 0;
+  padding: 70px 0 0 0;
   transition: all 0.3s;
 }
