--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1306,3 +1306,17 @@
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
 }
+
+.list_sns_title {
+  margin: 0;
+  padding: 0 10px 30px 0;
+  font-size: 3rem;
+}
+
+.list_sns_container {
+  margin: 0 auto;
+  padding: 0 10px 0 10px;
+  min-width: 300px;
+  width: 100%;
+  max-width: 500px;
+}
