--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -30,7 +30,7 @@
 }
 
 .event_list_title {
-  margin: 0 0 20px 0;
+  margin: 30px 0 20px 0;
   font-size: 4rem;
   font-weight: normal;
   /* font-family: 'D-DINCondensed', sans-serif; */
