--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -176,7 +176,7 @@
   top: 0;
   opacity: 0;
   transition: all 0.3s;
-  padding: 70px 0 0 0;
+  padding: 70px 0 70px 0;
   pointer-events: none;
 }
 
