--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1326,3 +1326,12 @@
   font-size: 1.6rem;
   text-align: left;
 }
+
+.textCount {
+  margin: 0;
+  width: 100%;
+  padding: 0 10px 10px 10px;
+  text-align: right;
+  font-size: 1.2rem;
+  color: #999;
+}
