--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -1231,7 +1231,7 @@
   padding: 0 10px;
   position: relative;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
 }
 
 .btn_show_list_reset,
