--- a/src/styles/components/SocialButton.module.css
+++ b/src/styles/components/SocialButton.module.css
@@ -5,8 +5,8 @@
 .btn_login_google,
 .btn_login_yahoo {
   box-sizing: border-box;
-  margin: 0 0 30px 0;
-  width: 100%;
+  margin: 30px 0 0 0;
+  width: 300px;
   padding: 15px 0;
   position: relative;
   border: none;
