--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -19,7 +19,7 @@
   max-width: 800px;
   min-width: 320px;
   height: 60px;
-  padding: 0 0 0 20px;
+  padding: 0;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -37,6 +37,7 @@
 }
 .logo {
   margin: 0;
+  padding: 0 20px;
   font-size: 2.4rem;
   font-weight: normal;
   line-height: 60px;
