--- a/src/styles/components/SocialButton.module.css
+++ b/src/styles/components/SocialButton.module.css
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   margin: 30px 0 0 0;
   width: 100%;
+  max-width: 500px;
   padding: 15px 0;
   position: relative;
   border: none;
