--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -140,7 +140,7 @@
   margin: 0;
   font-size: 1.4rem;
   color: #666;
-  text-align: left;
+  text-align: center;
 }
 
 .modal_space {
@@ -148,10 +148,15 @@
   margin: 0 0 30px 0;
 }
 
-.button {
+.modal_btn_container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal_btn_enter {
   margin: 0;
   padding: 10px 0;
-  width: 60%;
+  width: 40%;
   background-color: #68a9cf;
   border-radius: 5px;
   border: 0;
@@ -159,6 +164,21 @@
   color: #fff;
   text-align: center;
   cursor: pointer;
+}
+
+.modal_btn_cancel {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 10px 0;
+  width: 40%;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 0;
+  font-size: 1.6rem;
+  color: #68a9cf;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid #68a9cf;
 }
 
 .link {
