--- a/src/styles/components/view.module.css
+++ b/src/styles/components/view.module.css
@@ -13,13 +13,14 @@
   max-width: 840px;
 }
 
-.box_line {
-  margin: 0 auto;
-  min-width: 320px;
-  max-width: 500px;
-  padding: 40px 20px;
+.box_line_text {
+  margin: 50px 0 30px 0;
+  width: 100%;
+  font-size: 1.6rem;
+  line-height: 3.2rem;
+  padding: 20px;
   border: 1px #ccc solid;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 @media screen and (max-width: 839px) {
@@ -34,7 +35,7 @@
 }
 
 .content_title {
-  margin: 0 0 50px 0;
+  margin: 0 0 80px 0;
   font-size: 5rem;
   font-weight: normal;
   font-family: 'FuturaPTMedium', sans-serif;
