--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -66,7 +66,7 @@
 .input_text_validated,
 .input_password_checked {
   margin: 0;
-  padding: 10px 20px;
+  padding: 10px;
   width: 100%;
   font-size: 1.6rem;
   border-radius: 5px;
