--- a/src/styles/components/view.module.css
+++ b/src/styles/components/view.module.css
@@ -61,3 +61,20 @@
   position: relative;
   background: #f1f1f1;
 }
+
+.btn_Link {
+  margin: 0 0 20px 0;
+  width: 200px;
+  border-radius: 30px;
+  border: 0px;
+  color: #fff;
+  font-size: 2.4rem;
+  transition: all 0.3s;
+  position: relative;
+  font-family: 'FuturaPTMedium', sans-serif;
+  letter-spacing: 2px;
+  padding: 15px 0 15px 0;
+  text-align: center;
+  background-color: #f2c746;
+  cursor: pointer;
+}
