--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -16,16 +16,15 @@
 .btn_submit,
 .btn_submit_active {
   box-sizing: border-box;
-  margin: 0 auto;
-  padding: 15px 0;
+  margin: 30px 0 0 0;
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
+  padding: 15px 0;
   position: relative;
   border: none;
-  border-radius: 5px;
   font-size: 1.6rem;
-  color: #fff;
-  transition: all 0.3s;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .btn_submit {
@@ -34,20 +33,21 @@
 
 .btn_submit_active {
   background-color: #68a9cf;
+  color: #fff;
   cursor: pointer;
 }
 
 .btn_submit svg,
 .btn_submit_active svg {
   position: absolute;
-  width: 24px;
-  height: 24px;
-  top: 50%;
+  width: 30px;
+  height: 30px;
+  fill: #fff;
   left: 15px;
+  top: 50%;
   transform: translate(0, -50%);
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
-  fill: #fff;
 }
 
 /* テキスト入力 */
