--- a/src/styles/components/SearchEventForm.module.css
+++ b/src/styles/components/SearchEventForm.module.css
@@ -127,6 +127,7 @@
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   border-radius: 10px;
   overflow: hidden;
+  z-index: 100;
 }
 
 .search_result {
