--- a/src/styles/components/SearchEventForm.module.css
+++ b/src/styles/components/SearchEventForm.module.css
@@ -60,8 +60,8 @@
   left: 10px;
   cursor: pointer;
   display: inline-block;
-  width: 14px;
-  height: 14px;
+  width: 18px;
+  height: 18px;
   text-align: center;
   line-height: 14px;
   border-radius: 50%;
@@ -128,6 +128,7 @@
   border-radius: 10px;
   overflow: hidden;
   z-index: 100;
+  display: block;
 }
 
 .search_result {
