--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -109,7 +109,7 @@
 /* インプット注意事項 */
 
 .input_notes {
-  margin: 0 auto 20px auto;
+  margin: 0 auto;
   width: 100%;
   font-size: 1.2rem;
   color: #999;
@@ -130,7 +130,7 @@
   display: flex;
   align-items: center;
   font-size: 1.6rem;
-  margin: 0 0 20px 0;
+  margin: 20px 0;
   font-weight: bold;
 }
 
