--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -5,10 +5,24 @@
   /* background-color: #c8e5f6; */
 }
 
-.footer {
+.footer_nav {
   width: 100%;
   max-width: 850px;
   margin: 30px auto;
   position: relative;
+  font-size: 2rem;
+  font-family: 'FuturaPTMedium', sans-serif;
+}
+
+.copyright {
   font-size: 1.6rem;
+  font-family: 'FuturaPTMedium', sans-serif;
+  margin: 0 0 30px 0;
+}
+
+.footer_twitter {
+  margin: 30px 0 80px 0;
+  font-size: 2rem;
+  font-family: 'FuturaPTMedium', sans-serif;
+  color: #1da1f2;
 }
