--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -21,8 +21,14 @@
 }
 
 .footer_twitter {
-  margin: 30px 0 80px 0;
+  margin: 30px 0 20px 0;
   font-size: 2rem;
   font-family: 'FuturaPTMedium', sans-serif;
   color: #1da1f2;
+}
+
+.footter_twitter_icon svg {
+  width: 40px;
+  height: 40px;
+  fill: #1da1f2;
 }
