--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -350,6 +350,14 @@
   line-height: 20px;
   font-weight: bold;
 }
+
+.price_container {
+  margin: 5px 0 5px 0;
+  padding: 0;
+  text-align: right;
+  font-size: 1.8rem;
+  font-family: sans-serif;
+}
 .subtotalcontainer {
   text-align: right;
   width: 100%;
@@ -363,6 +371,8 @@
   justify-content: space-between;
   -webkit-align-items: center;
   align-items: center;
+  font-size: 14px;
+  color: #666;
 }
 .group_arrow_open,
 .group_arrow_close {
@@ -425,7 +435,8 @@
   min-width: 120px;
   margin-left: 10px;
   margin-right: 0;
-  font-size: 18px;
+  font-size: 1.8rem;
+  font-weight: bold;
   font-family: sans-serif;
   display: -webkit-flex;
   display: flex;
@@ -433,6 +444,7 @@
   justify-content: flex-end;
   -webkit-align-items: center;
   align-items: center;
+  color: #000;
 }
 
 .goods_detail_container {
